deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: gitlab-ce
  name: gitlab-ce
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gitlab-ce
  template:
    metadata:
      labels:
        app: gitlab-ce
    spec:
      containers:
      - image: docker.io/gitlab/gitlab-ce:latest
        imagePullPolicy: Always
        name: gitlab-ce
        ports:
        - containerPort: 9090
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      # nodeSelector:
      #   kubernetes.io/arch: amd64
      # volumes:
      # - name: configuration-data
      #   hostPath:
      #     # directory location on host
      #     path: /foo/etc/gitlab
      #     # this field is optional
      #     type: Directory  
      # - name: logs-data
      #   hostPath:
      #     # directory location on host
      #     path: /foo/var/log/gitlab
      #     # this field is optional
      #     type: Directory  
      # - name: application-data
      #   hostPath:
      #     # directory location on host
      #     path: /foo/opt/gitlab
      #     # this field is optional
      #     type: Directory
