deployment_with_volumes.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "9"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"labels":{"app":"gitlab-ce"},"name":"gitlab-ce","namespace":"gitlab"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"gitlab-ce"}},"template":{"metadata":{"labels":{"app":"gitlab-ce"}},"spec":{"containers":[{"env":[{"name":"GITLAB_OMNIBUS_CONFIG","value":"external_url 'http://192.168.0.182:8081';prometheus_monitoring['enable'] = false"},{"name":"HOSTNAME","value":"192.168.0.182"},{"name":"GITLAB_ROOT_PASSWORD", [...]
  creationTimestamp: "2023-11-30T10:21:40Z"
  generation: 9
  labels:
    app: gitlab-ce
  name: gitlab-ce
  namespace: gitlab
  resourceVersion: "587102"
  uid: 78ffad3e-bf9a-421a-9068-47ff0c9262a6
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: gitlab-ce
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: gitlab-ce
    spec:
      containers:
      - env:
        - name: GITLAB_OMNIBUS_CONFIG
          value: external_url 'http://192.168.0.182:8081';prometheus_monitoring['enable']
            = false
        - name: HOSTNAME
          value: 192.168.0.182
        - name: GITLAB_ROOT_PASSWORD
          value: P@ssw0rd!
        image: docker.io/gitlab/gitlab-ce:latest
        imagePullPolicy: Always
        name: gitlab-ce
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /etc/gitlab
          name: configuration-data
        - mountPath: /var/log/gitlab
          name: logs-data
        - mountPath: /var/opt/gitlab
          name: application-data
      dnsPolicy: ClusterFirst
      nodeSelector:
        kubernetes.io/arch: amd64
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - hostPath:
          path: /home/labadmin/gitlab/etc/gitlab
          type: Directory
        name: configuration-data
      - hostPath:
          path: /home/labadmin/gitlab/var/log/gitlab
          type: Directory
        name: logs-data
      - hostPath:
          path: /home/labadmin/gitlab/var/opt/gitlab
          type: Directory
        name: application-data
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2023-12-15T09:37:58Z"
    lastUpdateTime: "2023-12-15T09:40:36Z"
    message: ReplicaSet "gitlab-ce-7b4b7b89d9" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  - lastTransitionTime: "2023-12-21T09:45:51Z"
    lastUpdateTime: "2023-12-21T09:45:51Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  observedGeneration: 9
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
