service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: gitlab-ce
  name: gitlab
spec:
  ports:
  - port: 9090
    protocol: TCP
    targetPort: 9090
  selector:
    app: gitlab-ce
